
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2013-11-30

	* Updated autoconf/automake stuff so that tests work properly with
	  automake versions that default to running parallel-tests.

	2013-07-06

	* Relicensed all security announcements under a dual-license, at the
	  user's option, to ease distribution without repackaging:

	  - Creative Commons Attribution-NoDerivs 3.0 Germany License
	    (CC BY-ND 3.0)
	  - GNU General Public License v3 or newer (GPL v3+).

1.2.4	2013-07-01 (released)

	2013-06-28
	* Fix three crashes in command line and environment variable parsers
	  that caused NULL pointer dereferences with long option variants
	  of bogofilter --syslog-tag, or bogoutil --timestamp-date, or when
	  bogotune -M<file> cannot derive the bogofilter directory.
	  Reported by Alexandre Rebert, found with Mayhem tool.

	* Add getopt_long_chk(), a getopt_long variant that checks if the
	  overlapping short and long options agree on whether their argument
	  is not required, mandatory, or optional.  If they disagree, the
	  program aborts.

	* Fix a crash in command line parser that causes a NULL pointer
	  dereference when --db-cachesize is used without argument.
	  Found with getopt_long_chk().

	2013-01-20
	* Change lexer API/ABI a bit so as to work with flex 2.5.36 generated
	  lexers (for instance, on Fedora 18 "Spherical Cow") that flip the
	  type of yyleng from int to size_t. We use a signed long internally.

	2012-12-30
	* The bogofilter project was updated to the new SourceForge.net
	  platform. This has caused the URLs to change. Use one of these
	  commands for a read-only checkout: